[package]
name = "audio-split"
version = "0.1.0"
edition = "2024"
description = "Split audio file into multiple flac files or a cue sheet"
authors = ["Roger Klaveness"]

# Extra fields embedded in the Windows .exe version info (see build.rs)
[package.metadata.winresource]
ProductName = "Audio Split"
FileDescription = "Split audio file into multiple flac files or a cue sheet"
LegalCopyright = "Copyright © 2026 Roger Klaveness"

[dependencies]
flacenc = { version = "0.5", default-features = false }
iced = { version = "0.13", features = ["canvas", "tokio", "advanced"] }
metaflac = "0.2"
rfd = "0.15"
rodio = { version = "0.19", default-features = false }
symphonia = { version = "0.5", default-features = false, features = ["flac", "wav", "pcm"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[build-dependencies]
winresource = "0.1"
